// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> 선택되지 않은 탭을 누르면 해당 탭 페이지를 표시한다 1`] = `
.c0 {
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <TabHeader>
    <TabItem
      key="title1"
      onClick={[Function]}
      selected={true}
    >
      title1
    </TabItem>
    <TabItem
      key="title2"
      onClick={[Function]}
      selected={false}
    >
      title2
    </TabItem>
  </TabHeader>
  <TabDivider
    borderColor="gray.30"
  />
  <TabPage
    key="title1"
    name="title1"
  >
    탭 페이지 1
  </TabPage>
</div>
`;

exports[`<Tab /> 선택되지 않은 탭을 누르면 해당 탭 페이지를 표시한다 2`] = `
.c0 {
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <TabHeader>
    <TabItem
      key="title1"
      onClick={[Function]}
      selected={false}
    >
      title1
    </TabItem>
    <TabItem
      key="title2"
      onClick={[Function]}
      selected={true}
    >
      title2
    </TabItem>
  </TabHeader>
  <TabDivider
    borderColor="gray.30"
  />
  <TabPage
    key="title2"
    name="title2"
  >
    탭 페이지 2
  </TabPage>
</div>
`;

exports[`<Tab /> 정상적으로 렌더링된다 1`] = `
.c0 {
  width: 100%;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  height: 0.125rem;
  margin-top: -0.125rem;
  z-index: -1;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      componentname="Button"
    >
      title1
    </span>
    <span
      componentname="Button"
    >
      title2
    </span>
  </div>
  <div
    class="c2"
  />
  <span
    componentname="TabPage"
  >
    탭 페이지 1
  </span>
</div>
`;
